--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Portfólio Marcos Winther</title>
+      <title>Portfólio Ângelo Santos</title>
 
       <!-- Favicon-->
       <link rel="shortcut icon" href="https://s.w.org/images/core/emoji/14.0.0/svg/1f468-1f3fb-200d-1f4bb.svg" type="image/x-icon" />
@@ -38,11 +38,13 @@
                <p class="job" id="profile.job">
                   Carregando...
                </p>
-               <p class="location" id="profile.location">
-                  Carregando...
-               </p>
+               <a href="https://maps.app.goo.gl/fDyxfqfhcNNXMip99" target="_blank">  
+                  <p class="location" id="profile.location">
+                     Carregando... 
+                  </p>
+               </a>
                <p class="email">
-                  <a href="mailto:winthermarcos@gmail.com" id="profile.email">carregando@mail.com</a>
+                  <a href="mailto:angelovinicius123@gmail.com" id="profile.email">carregando@mail.com</a>
                </p>
             </div>
          </header>
@@ -106,12 +108,6 @@
                </ul>
             </div>
          </section>
-
-         <footer>
-            <a href="https://www.dio.me/" target="_blank">
-               <img src="assets/img/dio.svg" alt="DIO">
-            </a>
-         </footer>
       </main>
 
       <script src="assets/js/acordeon.js"></script>
