--- a/index.html
+++ b/index.html
@@ -108,10 +108,16 @@
                </ul>
             </div>
          </section>
+         <footer>
+            <a href="https://www.uninassau.edu.br/" target=_blank>
+               <img src="assets/img/logo_nassau.png" alt="Uninassau">
+            </a>
+         </footer>
       </main>
 
       <script src="assets/js/acordeon.js"></script>
       <script src="assets/js/api.js"></script>
       <script src="assets/js/main.js"></script>
+
    </body>
 </html>
